syntax = "proto3";

package com.zzh.protocol;
option java_outer_classname = "Ack";

/*
与ack相关的只有client和server
client<->server:目标用户ID 目标消息ID
*/
message AckMsg {
    // 消息唯一ID
    int64 id = 1;

    //创建时间
    int64 timeStamp = 2;

    Module fromModule = 3;

    //接收者userId,
    string destId = 4;

    //目标消息ID
    int64 ackMsgId = 5;
    int64 ackMsgSessionId = 6;

    enum Module {
        CLIENT = 0;
        SERVER = 1;
        TRANSFER = 2;
    }
}